--- a/visao.html
+++ b/visao.html
@@ -10,73 +10,89 @@
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
-    <div class="container">
-        <!-- Barra lateral esquerda -->
-        <aside class="sidebar">
-            <input type="text" placeholder="Pesquisar..." class="search-bar">
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html">Página Principal</a></li>
-                    <li><a href="serial.html">Pesquisa Serial</a></li>
-                    <li><a href="lvp.html">Pesquisa PA (LVP)</a></li>
-                    <li><a href="os.html">Abrir OS</a></li>
-                    <li><a href="nf.html">Baixar NF</a></li>
-                    <li><a href="visao.html">Romaneio Visão</a></li>
-                </ul>
-            </nav>
-        </aside>
+    <header class="main-header">
+        <div class="logo">WDC AJUDAS</div>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Página Principal</a></li>
+                
+                <li><a href="emails.html">Script de E-mails</a></li>
 
-        <!-- Conteúdo principal -->
-        <main class="content">
-            <section id="romaneio-visao">
-                <h1>Romaneio Visão - Passo a Passo</h1>
-
-                <!-- Instruções -->
-                <div class="step">
-                    <h2>Como Puxar Notas no Visão</h2>
-                    <ul>
-                        <li>1. Solicite ao Visão enviando uma mensagem com <strong>"Oi"</strong> ou <strong>"Olá"</strong> no chat.</li>
-                        <li>2. Quando o Visão responder com as opções, clique em <strong>"Pesquisar Seriais de NF"</strong>.</li>
-                        <li>3. Escolha a modalidade da nota:
-                            <ul>
-                                <li><strong>Venda:</strong> Notas seguem normalmente.</li>
-                                <li><strong>Ativação:</strong> Essas são notas de baixa.</li>
-                                <li><strong>Locação:</strong>
-                                    <ul>
-                                        <li>Informe a nota de locação.</li>
-                                        <li>Colete a nota de baixa que o Visão informar.</li>
-                                        <li>Cole novamente a nota de baixa no chat e selecione o local (<strong>Matriz</strong> ou <strong>Simões Filho</strong>).</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>4. Após informar a modalidade, insira o número da nota fiscal.</li>
-                        <li>5. Informe a filial:
-                            <ul>
-                                <li><strong>01:</strong> Matriz</li>
-                                <li><strong>08:</strong> Simões Filho</li>
-                            </ul>
-                        </li>
-                        <li>6. Aguarde o Visão retornar e clique no link fornecido.</li>
-                    </ul>
-                </div>
-
-                <!-- Carrossel de Imagens -->
-                <div class="carousel-wrapper">
-                    <h2>Passo a Passo com Imagens</h2>
-                    <div class="carousel">
-                        <button class="carousel-button prev" disabled>❮</button>
-                        <div class="carousel-images">
-                            <img src="imgs/pesquisa.png" alt="Passo 1">
-                            <img src="imgs/modalidade.png" alt="Passo 2">
-                            <img src="imgs/filial.png" alt="Passo 3">
-                        </div>
-                        <button class="carousel-button next">❯</button>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Automação/Atalhos</a>
+                    <div class="dropdown-content">
+                        <a href="atalhos.html">Atalhos</a>
+                        <a href="comprar-lista.html">Comparar Lista</a>
+                        <a href="adds.html">Adicionar S</a>
+                        <a href="garantia.html">Definir Garantia</a>
+                        <a href="verificarnf.html">Verificar NF</a>
+                        <a href="revendagarantia.html">Definir Garantia Revenda</a>
+                        <a href="conferencia-valores.html">Conferir Valores Unitário</a>
                     </div>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn active">Pesquisas</a>
+                    <div class="dropdown-content">
+                        <a href="serial.html">Pesquisa Serial</a>
+                        <a href="lvp.html">Pesquisa PA (LVP)</a>
+                        <a href="os.html">Abrir OS</a>
+                        <a href="nf.html">Baixar NF</a>
+                        <a href="visao.html">Romaneio Visão</a>
+                        <a href="garantiafabricante.html">Pesquisa Fabricante</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+        <input type="text" placeholder="Pesquisar..." class="search-bar">
+    </header>
+
+    <main class="content">
+        <section id="romaneio-visao">
+            <h1>Romaneio Visão - Passo a Passo</h1>
+
+            <div class="step">
+                <h2>Como Puxar Notas no Visão</h2>
+                <ul>
+                    <li>1. Solicite ao Visão enviando uma mensagem com <strong>"Oi"</strong> ou <strong>"Olá"</strong> no chat.</li>
+                    <li>2. Quando o Visão responder com as opções, clique em <strong>"Pesquisar Seriais de NF"</strong>.</li>
+                    <li>3. Escolha a modalidade da nota:
+                        <ul>
+                            <li><strong>Venda:</strong> Notas seguem normalmente.</li>
+                            <li><strong>Ativação:</strong> Essas são notas de baixa.</li>
+                            <li><strong>Locação:</strong>
+                                <ul>
+                                    <li>Informe a nota de locação.</li>
+                                    <li>Colete a nota de baixa que o Visão informar.</li>
+                                    <li>Cole novamente a nota de baixa no chat e selecione o local (<strong>Matriz</strong> ou <strong>Simões Filho</strong>).</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>4. Após informar a modalidade, insira o número da nota fiscal.</li>
+                    <li>5. Informe a filial:
+                        <ul>
+                            <li><strong>01:</strong> Matriz</li>
+                            <li><strong>08:</strong> Simões Filho</li>
+                        </ul>
+                    </li>
+                    <li>6. Aguarde o Visão retornar e clique no link fornecido.</li>
+                </ul>
+            </div>
+
+            <div class="carousel-wrapper">
+                <h2>Passo a Passo com Imagens</h2>
+                <div class="carousel">
+                    <button class="carousel-button prev" disabled>❮</button>
+                    <div class="carousel-images">
+                        <img src="imgs/pesquisa.png" alt="Passo 1">
+                        <img src="imgs/modalidade.png" alt="Passo 2">
+                        <img src="imgs/filial.png" alt="Passo 3">
+                    </div>
+                    <button class="carousel-button next">❯</button>
                 </div>
-            </section>
-        </main>
-    </div>
+            </div>
+        </section>
+    </main>
 
     <script src="JS/scripts.js"></script>
     <script>
