--- a/emails.html
+++ b/emails.html
@@ -76,7 +76,7 @@
                     <option value="pendencias">Transportadoras - Pendências (Singular/Plural)</option>
                     <option value="pendencias_lista">Transportadoras - Pendências com lista</option>
                     <option value="nfs_retidas">NFs retidas - Notificação ao cliente</option>
-                    <option value="ticket_correios">Ticket correios-Geral</option>
+                    <option value="ticket_correios">Ticket Correios - Geral</option>
                 </select>
                 
                 <div id="ticket-correios-options" class="hidden">
@@ -194,3 +194,4 @@
     <script src="JS/scripts.js"></script>
 </body>
 </html>
+
