Modify manufacturer options in warranty form
Updated the list of manufacturers in the dropdown menu for warranty research.

--- a/garantiafabricante.html
+++ b/garantiafabricante.html
@@ -53,20 +53,27 @@
                 <label for="fabricante">Selecione o Fabricante:</label>
                 <select id="fabricante" name="fabricante">
                     <option value="x">Selecione o fabricante</option>
+                    <option value="Axis">Axis</option>
+                    <option value="Digifort">Digifort</option>
+                    <option value="Easy4Link">Easy4Link</option>
                     <option value="Fujikura">Fujikura</option>
-                    <option value="MERCUSYS">MERCUSYS</option>
-                    <option value="Easy4Link">Easy4 Link</option>
                     <option value="Grandstream">Grandstream</option>
-                    <option value="Hikvision">Hikvision</option>
                     <option value="Huawei">Huawei</option>
                     <option value="IDEMIA">IDEMIA</option>
                     <option value="ISS">ISS</option>
                     <option value="JinkoSolar">Jinko Solar</option>
-                    <option value="Logitech">Logitech</option>
                     <option value="LG">LG</option>
                     <option value="Leyard">Leyard</option>
+                    <option value="Logitech">Logitech</option>
+                    <option value="MERCUSYS">MERCUSYS</option>
                     <option value="Nokia">Nokia</option>
-                    </select>
+                    <option value="Panduit">Panduit</option>
+                    <option value="Pelco">Pelco</option>
+                    <option value="Shure">Shure</option>
+                    <option value="Sophos">Sophos</option>
+                    <option value="TP-LINK">TP-LINK</option>
+                    <option value="Yamaha">Yamaha</option>
+                </select>
                 <button type="button" onclick="pesquisarGarantia()">Pesquisar</button>
             </form>
             <div id="resultado-garantia">
