--- a/atalhos.html
+++ b/atalhos.html
@@ -6,6 +6,7 @@
     <title>Atalhos</title>
     <link rel="stylesheet" href="CSS/serial.css"> 
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/atalhos.css">
     
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 </head>
@@ -51,25 +52,39 @@
             <h1>Atalhos</h1>
             <div class="atalhos-container">
                 <div class="box">
-                    <h2>Atalhos do Computador</h2>
+                    <h2>Atalhos do Windows (Gerais) </h2>
                     <ul>
-                        <li>Ctrl + C: Copiar</li>
-                        <li>Ctrl + V: Colar</li>
-                        <li>Ctrl + X: Cortar (Você remove o item de um local e cola em outro)</li>
-                        <li>Ctrl + y: Volta itens removidos pelo Ctrl + Z</li>
-                        <li>Alt + Tab: Alternar entre janelas</li>
-                        <li>Ctrl + Shift + Esc: Abrir o Gerenciador de Tarefas</li>
-                        <li>Windows + D: Mostrar área de trabalho</li>
+                        <li><strong>Ctrl + C</strong> <span>Copiar</span></li>
+                        <li><strong>Ctrl + V</strong> <span>Colar</span></li>
+                        <li><strong>Ctrl + X</strong> <span>Cortar (Remove o item de um local e cola em outro)</span></li>
+                        <li><strong>Ctrl + Z</strong> <span>Desfazer a última ação</span></li>
+                        <li><strong>Ctrl + Y</strong> <span>Refazer (Volta itens removidos/desfeitos pelo Ctrl + Z)</span></li>
+                        <li><strong>Ctrl + A</strong> <span>Selecionar todos os itens da janela ou do documento</span></li>
+                        <li><strong>Alt + Tab</strong> <span>Alternar entre janelas abertas</span></li>
+                        <li><strong>Alt + F4</strong> <span>Fechar a janela ou programa atual; se estiver na área de trabalho, abre a caixa de diálogo Desligar</span></li>
+                        <li><strong>Ctrl + Shift + Esc</strong> <span>Abrir o Gerenciador de Tarefas</span></li>
+                        <li><strong>Windows + D</strong> <span>Mostrar/Ocultar a Área de Trabalho</span></li>
+                        <li><strong>Windows + L</strong> <span>Bloquear o computador</span></li>
+                        <li><strong>Windows + E</strong> <span>Abrir o Explorador de Arquivos</span></li>
+                        <li><strong>Windows + Ponto (.) ou Vírgula (,)</strong> <span>Abrir o painel de Emojis</span></li>
+                        <li><strong>F2</strong> <span>Renomear o arquivo selecionado</span></li>
                     </ul>
                 </div>
                 <div class="box">
-                    <h2>Atalhos do Excel</h2>
+                    <h2>Atalhos do Microsoft Excel</h2>
                     <ul>
-                        <li>Shift + Scroll (Bolinha do mouse): Move a planilha para esquerda ou direita</li>
-                        <li>Ctrl + S: Salvar</li>
-                        <li>F4: Repetir última ação</li>
-                        <li>Ctrl + Shift + L: Aplicar/Remover filtros</li>
-                        <li>Alt + =: AutoSoma</li>
+                        <li><strong>Ctrl + S</strong> <span>Salvar</span></li>
+                        <li><strong>F4</strong> <span>Repetir última ação ou tornar referências de célula absolutas/relativas ($A$1 para A1 e vice-versa)</span></li>
+                        <li><strong>Shift + Scroll (Bolinha do mouse)</strong> <span>Move a planilha para esquerda ou direita (Rolagem Horizontal)</span></li>
+                        <li><strong>Ctrl + Shift + L</strong> <span>Aplicar/Remover Filtros em um intervalo</span></li>
+                        <li><strong>Alt + =</strong> <span>AutoSoma (Insere a função `SOMA()`)</span></li>
+                        <li><strong>Ctrl + Ponto e Vírgula (;)</strong> <span>Inserir a data atual</span></li>
+                        <li><strong>Ctrl + Shift + Ponto e Vírgula (;)</strong> <span>Inserir a hora atual</span></li>
+                        <li><strong>Ctrl + 1</strong> <span>Abrir a caixa de diálogo Formatar Células</span></li>
+                        <li><strong>Ctrl + Seta </strong> <span>Mover para a borda da região de dados atual (útil para navegar rapidamente)</span></li>
+                        <li><strong>Ctrl + Shift + Seta</strong> <span>Selecionar dados até a borda da região atual</span></li>
+                        <li><strong>Ctrl + T</strong> <span>Aplicar Formato de Tabela ao intervalo de dados selecionado</span></li>
+                        <li><strong>Ctrl + End</strong> <span>Ir para a última célula usada na planilha</span></li>
                     </ul>
                 </div>
             </div>
