--- a/adds.html
+++ b/adds.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar 'S' aos Itens</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css"> 
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
@@ -61,22 +61,21 @@
     </main>
 
     <script>
-        // Função para manipular a adição do 'S'
         function handleAddS() {
-            // Obter os valores de entrada, separando por linha, removendo espaços e eliminando linhas vazias
+            // 1. Obter, limpar e filtrar a lista de itens
             const items = document.getElementById('item-list').value
                 .split('\n')
                 .map(item => item.trim())
                 .filter(Boolean);
 
-            // MODIFICAÇÃO: Adicionar 'S ' (com espaço) ao início de cada item
+            // 2. Adicionar 'S ' (com espaço) ao início de cada item para melhor legibilidade
             const modifiedItems = items.map(item => 'S ' + item);
 
-            // Exibir os resultados na área de texto de saída
+            // 3. Exibir os resultados
             document.getElementById('modified-items').value = modifiedItems.join('\n');
         }
 
-        // Adicionar o listener ao botão
+        // Adicionar o listener ao botão após o DOM estar carregado
         document.getElementById('add-s-btn').addEventListener('click', handleAddS);
     </script>
     <script src="JS/scripts.js"></script> 
