--- a/adds.html
+++ b/adds.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar 'S' aos Itens</title>
-    <link rel="stylesheet" href="CSS/styles.css"> 
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/comparar.css"> 
+    
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
@@ -47,8 +49,7 @@
     <main class="content">
         <h3>Adicionar 'S' aos Itens</h3>
         
-        <div class="input-group"> 
-            <label for="item-list">Lista de itens:</label>
+        <div class="input-group"> <label for="item-list">Lista de itens:</label>
             <textarea id="item-list" class="main-input" rows="10" placeholder="Insira os itens, um por linha"></textarea>
         </div>
 
@@ -61,23 +62,17 @@
     </main>
 
     <script>
-        function handleAddS() {
-            // 1. Obter, limpar e filtrar a lista de itens
-            const items = document.getElementById('item-list').value
-                .split('\n')
-                .map(item => item.trim())
-                .filter(Boolean);
+        document.getElementById('add-s-btn').addEventListener('click', function () {
+            // Obter os valores de entrada
+            const items = document.getElementById('item-list').value.split('\n').map(item => item.trim()).filter(Boolean);
 
-            // 2. Adicionar 'S ' (com espaço) ao início de cada item para melhor legibilidade
-            const modifiedItems = items.map(item => 'S ' + item);
+            // Adicionar 'S' ao início de cada item
+            const modifiedItems = items.map(item => 'S' + item);
 
-            // 3. Exibir os resultados
+            // Exibir os resultados
             document.getElementById('modified-items').value = modifiedItems.join('\n');
-        }
-
-        // Adicionar o listener ao botão após o DOM estar carregado
-        document.getElementById('add-s-btn').addEventListener('click', handleAddS);
+        });
     </script>
-    <script src="JS/scripts.js"></script> 
+    <script src="JS/scripts.js"></script>
 </body>
 </html>
