--- a/garantia.html
+++ b/garantia.html
@@ -49,13 +49,13 @@
     <main class="content">
         <h3>Verificar Garantias</h3>
         <label for="date-list">Lista de datas (formato DD/MM/AAAA):</label>
-        <textarea id="date-list" rows="10" placeholder="Insira as datas, uma por linha"></textarea>
+        <textarea id="date-list" class="main-input" rows="10" placeholder="Insira as datas, uma por linha"></textarea>
 
-        <button id="check-warranty-btn">Verificar Garantia</button>
+        <button id="check-warranty-btn" class="main-button">Verificar Garantia</button>
 
         <div id="result" class="result-box">
             <p>Resultados:</p>
-            <textarea id="warranty-results" rows="10" readonly></textarea>
+            <textarea id="warranty-results" class="main-input" rows="10" readonly></textarea>
         </div>
     </main>
 
